<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/countdownTimerFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CountdownFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--HH:MM:SS-->
        <TextView
            android:id="@+id/textViewHHMMSS"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/hh_mm_ss"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/buttonStartCountdown"
            app:layout_constraintEnd_toEndOf="@+id/editTextSeconds"
            app:layout_constraintStart_toStartOf="@+id/editTextHours"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

        <!--Countdown Fields-->
        <EditText
            android:id="@+id/editTextHours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="2"
            android:gravity="center"
            android:hint="@string/value_00"
            android:inputType="number"
            app:layout_constraintBottom_toBottomOf="@+id/editTextMinutes"
            app:layout_constraintEnd_toStartOf="@+id/editTextMinutes"
            app:layout_constraintTop_toTopOf="@+id/editTextMinutes" />

        <EditText
            android:id="@+id/editTextMinutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="2"
            android:gravity="center"
            android:hint="@string/value_00"
            android:inputType="number"
            app:layout_constraintBottom_toTopOf="@+id/buttonStartCountdown"
            app:layout_constraintEnd_toEndOf="@+id/buttonStartCountdown"
            app:layout_constraintStart_toStartOf="@+id/buttonStartCountdown"
            app:layout_constraintTop_toBottomOf="@+id/textViewHHMMSS" />

        <EditText
            android:id="@+id/editTextSeconds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="2"
            android:gravity="center"
            android:hint="@string/value_00"
            android:inputType="number"
            app:layout_constraintBottom_toBottomOf="@+id/editTextMinutes"
            app:layout_constraintStart_toEndOf="@+id/editTextMinutes"
            app:layout_constraintTop_toTopOf="@+id/editTextMinutes" />

        <!--Countdown Buttons-->
        <Button
            android:id="@+id/buttonStartCountdown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_start"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonStopCountdown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/button_stop"
            app:layout_constraintEnd_toEndOf="@+id/buttonStartCountdown"
            app:layout_constraintStart_toStartOf="@+id/buttonStartCountdown"
            app:layout_constraintTop_toBottomOf="@+id/buttonStartCountdown" />

        <Button
            android:id="@+id/buttonResetCountdown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/button_reset"
            app:layout_constraintEnd_toEndOf="@+id/buttonStartCountdown"
            app:layout_constraintStart_toStartOf="@+id/buttonStartCountdown"
            app:layout_constraintTop_toBottomOf="@+id/buttonStopCountdown" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>