...
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/label_file_information_file_size"
            tools:text="file_information_file_size" />

        <!--Url details-->
        <TextView
            android:id="@+id/label_links_image_link"
            style="@style/TextViewSongLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_image_link"
            app:layout_constraintTop_toBottomOf="@+id/text_view_file_information_file_size"
            tools:text="links_image_link" />
        <TextView
            android:id="@+id/text_view_links_image_link"
            style="@style/TextViewSongData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/label_links_image_link"
            tools:text="links_image_link" />

...
